tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_qsystem_codegen@llvm21_9.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i64, { i1, i64, i1 } } @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %lazy_measure = call i64 @___lazy_measure(i64 %0), !dbg !13
  call void @___reset(i64 %0), !dbg !13
  %1 = insertvalue { i1, i64, i1 } { i1 true, i64 poison, i1 poison }, i64 %lazy_measure, 1
  %mrv = insertvalue { i64, { i1, i64, i1 } } poison, i64 %0, 0
  %mrv10 = insertvalue { i64, { i1, i64, i1 } } %mrv, { i1, i64, i1 } %1, 1
  ret { i64, { i1, i64, i1 } } %mrv10
}

declare i64 @___lazy_measure(i64)

declare void @___reset(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/ZsHeDgUnyeIVwAutKJHaZEPSZwPXP/ycUvnujGxZKPRCTcNfs/EGLoPGCKHhMq/zeCBZoPGeHBxpWCFCAIgmDOG")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i64, { i1, i64, i1 } }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!10 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i64, i1 }", file: !2, size: 8, align: 8, elements: !11)
!11 = !{!12, !9, !12}
!12 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!13 = !DILocation(line: 27583, column: 497, scope: !3)
