tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_qsystem_codegen@pre-mem2reg@llvm21_3.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0, double %1, double %2) !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca double, align 8
  %"2_2" = alloca double, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  store double %1, ptr %"2_1", align 8
  store double %2, ptr %"2_2", align 8
  %"2_01" = load i64, ptr %"2_0", align 4
  %"2_12" = load double, ptr %"2_1", align 8
  %"2_23" = load double, ptr %"2_2", align 8
  notail call void @___rxy(i64 %"2_01", double %"2_12", double %"2_23"), !dbg !9
  store i64 %"2_01", ptr %"4_0", align 4, !dbg !9
  %"4_04" = load i64, ptr %"4_0", align 4
  store i64 %"4_04", ptr %"0", align 4
  %"05" = load i64, ptr %"0", align 4
  ret i64 %"05"
}

declare void @___rxy(i64, double, double)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7, !8, !8}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!9 = !DILocation(line: 27062, column: 402, scope: !3)
