tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_qsystem_codegen@pre-mem2reg@llvm21_4.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i1, i64, i1 } @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, i64, i1 }, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca { i1, i64, i1 }, align 8
  %"6_0" = alloca i64, align 8
  %"8_0" = alloca i64, align 8
  %"9_0" = alloca { i1, i64, i1 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  store i64 %"2_01", ptr %"6_0", align 4
  %"6_02" = load i64, ptr %"6_0", align 4
  %lazy_measure = notail call i64 @___lazy_measure(i64 %"6_02"), !dbg !11
  notail call void @___qfree(i64 %"6_02"), !dbg !11
  store i64 %lazy_measure, ptr %"8_0", align 4, !dbg !11
  %"8_03" = load i64, ptr %"8_0", align 4
  %1 = insertvalue { i1, i64, i1 } { i1 true, i64 poison, i1 poison }, i64 %"8_03", 1
  store { i1, i64, i1 } %1, ptr %"9_0", align 4
  %"9_04" = load { i1, i64, i1 }, ptr %"9_0", align 4
  store { i1, i64, i1 } %"9_04", ptr %"4_0", align 4
  %"4_05" = load { i1, i64, i1 }, ptr %"4_0", align 4
  store { i1, i64, i1 } %"4_05", ptr %"0", align 4
  %"06" = load { i1, i64, i1 }, ptr %"0", align 4
  ret { i1, i64, i1 } %"06"
}

declare i64 @___lazy_measure(i64)

declare void @___qfree(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !10}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i64, i1 }", file: !2, size: 8, align: 8, elements: !8)
!8 = !{!9, !10, !9}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
